--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
         <link rel="icon" type="image/svg+xml" href="/logo.svg" />
         <title>Image Elf</title>
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DR8YQN5QE0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DR8YQN5QE0');
+    </script>
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
