--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+        <meta name="theme-color" content="#2AE5BC" />
         <link rel="icon" type="image/svg+xml" href="/logo.svg" />
         <title>Image Elf</title>
     </head>
