--- a/index.html
+++ b/index.html
@@ -5,7 +5,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
         <meta name="theme-color" content="#2AE5BC" />
         <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-        <title>Image Elf</title>
+        <title>Image Elf - Custom Image Generator</title>
+        <meta
+            content="An intuitive and free online tool for generating custom images. Set the dimensions (can be very large!), select the image format, and the application will produce the image for you."
+            name="description"
+        />
+        <meta content="Image Elf - Custom Image Generator" property="og:title" />
+        <meta
+            content="An intuitive and free online tool for generating custom images. Set the dimensions (can be very large!), select the image format, and the application will produce the image for you."
+            property="og:description"
+        />
+        <meta content="https://image-elf.vercel.app" property="og:url" />
+        <meta content="https://image-elf.vercel.app/logo.svg" property="og:image" />
+        <meta content="Image Elf - Custom Image Generator" name="twitter:title" />
+        <meta
+            content="An intuitive and free online tool for generating custom images. Set the dimensions (can be very large!), select the image format, and the application will produce the image for you."
+            name="twitter:description"
+        />
+        <meta content="https://image-elf.vercel.app/logo.svg" name="twitter:image:src" />
+        <link href="https://image-elf.vercel.app" rel="canonical" />
     </head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DR8YQN5QE0"></script>
@@ -15,7 +33,6 @@
             dataLayer.push(arguments);
         }
         gtag('js', new Date());
-
         gtag('config', 'G-DR8YQN5QE0');
     </script>
     <body>
