--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             content="An intuitive and free online tool for generating custom images. Set the dimensions (can be very large!), select the image format, and the application will produce the image for you."
             property="og:description"
         />
-        <meta content="https://image-elf.vercel.app" property="og:url" />
-        <meta content="https://image-elf.vercel.app/logo.svg" property="og:image" />
+        <meta content="https://www.image-elf.com" property="og:url" />
+        <meta content="https://www.image-elf.com/logo.svg" property="og:image" />
         <meta content="Image Elf - Custom Image Generator" name="twitter:title" />
         <meta
             content="An intuitive and free online tool for generating custom images. Set the dimensions (can be very large!), select the image format, and the application will produce the image for you."
             name="twitter:description"
         />
-        <meta content="https://image-elf.vercel.app/logo.svg" name="twitter:image:src" />
-        <link href="https://image-elf.vercel.app" rel="canonical" />
+        <meta content="https://www.image-elf.com/logo.svg" name="twitter:image:src" />
+        <link href="https://www.image-elf.com" rel="canonical" />
     </head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DR8YQN5QE0"></script>
