--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
         <meta name="theme-color" content="#2AE5BC" />
         <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-        <title>Image Elf - Custom Image Generator</title>
+        <title>Image Elf - Dummy Image Generator</title>
         <meta
-            content="An intuitive and free online tool for generating custom images. Set the dimensions (can be very large!), select the image format, and the application will produce the image for you."
+            content="An intuitive and free online tool for generating dummy images. Set the dimensions (can be very large!), select the image format, and the application will produce the image for you."
             name="description"
         />
-        <meta content="Image Elf - Custom Image Generator" property="og:title" />
+        <meta content="Image Elf - Dummy Image Generator" property="og:title" />
         <meta
-            content="An intuitive and free online tool for generating custom images. Set the dimensions (can be very large!), select the image format, and the application will produce the image for you."
+            content="An intuitive and free online tool for generating dummy images. Set the dimensions (can be very large!), select the image format, and the application will produce the image for you."
             property="og:description"
         />
         <meta content="https://www.image-elf.com" property="og:url" />
         <meta content="https://www.image-elf.com/logo.svg" property="og:image" />
-        <meta content="Image Elf - Custom Image Generator" name="twitter:title" />
+        <meta content="Image Elf - Dummy Image Generator" name="twitter:title" />
         <meta
-            content="An intuitive and free online tool for generating custom images. Set the dimensions (can be very large!), select the image format, and the application will produce the image for you."
+            content="An intuitive and free online tool for generating dummy images. Set the dimensions (can be very large!), select the image format, and the application will produce the image for you."
             name="twitter:description"
         />
         <meta content="https://www.image-elf.com/logo.svg" name="twitter:image:src" />
