simple localisation wip

--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
         gtag('js', new Date());
         gtag('config', 'G-DR8YQN5QE0');
     </script>
+    <script>
+        window.l10n = {
+            intro1: 'Press thy enchanted mouse',
+            intro2: 'and glide to summon an image of any size, grand or wee!',
+            intro3: ' - Image Elf',
+            mobileSubtitle: 'Generate an image of any size',
+            mobileDescription:
+                'Set your desired dimensions, select the image format, and download your creation instantly!',
+            imageFormat: 'Image Format',
+            widthPx: 'Width (px)',
+            heightPx: 'Height (px)',
+            tenXSize: '10x size',
+            generating: 'Generating...',
+            generateImage: 'Generate Image',
+        };
+    </script>
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
