basic russian translation

--- a/index-ru.html
+++ b/index-ru.html
@@ -35,6 +35,22 @@
         gtag('js', new Date());
         gtag('config', 'G-DR8YQN5QE0');
     </script>
+    <script>
+        window.l10n = {
+            intro1: 'Нажмите на волшебную мышь',
+            intro2: 'и проведите, чтобы вызвать изображение любого размера, большое или маленькое!',
+            intro3: '- Image Elf',
+            mobileSubtitle: 'Создайте изображение любого размера',
+            mobileDescription:
+                'Установите желаемые размеры, выберите формат изображения и мгновенно загрузите ваше творение!',
+            imageFormat: 'Формат изображения',
+            widthPx: 'Ширина (px)',
+            heightPx: 'Высота (px)',
+            tenXSize: 'Размер 10x',
+            generating: 'Генерация...',
+            generateImage: 'Создать изображение',
+        };
+    </script>
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
