--- a/index-ru.html
+++ b/index-ru.html
@@ -15,7 +15,7 @@
             content="Используйте перетаскивание для создания изображений-заглушек любого размера! Самый быстрый способ создать изображения-плейсхолдеры с указанными размерами."
             property="og:description"
         />
-        <meta content="https://www.image-elf.com/index-ru.html" property="og:url" />
+        <meta content="https://www.image-elf.com/ru" property="og:url" />
         <meta content="https://www.image-elf.com/logo.svg" property="og:image" />
         <meta content="Image Elf - Генератор изображений-заглушек" name="twitter:title" />
         <meta
@@ -23,7 +23,12 @@
             name="twitter:description"
         />
         <meta content="https://www.image-elf.com/logo.svg" name="twitter:image:src" />
-        <link href="https://www.image-elf.com/index-ru.html" rel="canonical" />
+
+        <link href="https://www.image-elf.com/ru" rel="canonical" />
+        <!-- Hreflang tags are IDENTICAL to the English page's tags -->
+        <link rel="alternate" hreflang="en" href="https://www.image-elf.com" />
+        <link rel="alternate" hreflang="ru" href="https://www.image-elf.com/ru" />
+        <link rel="alternate" hreflang="x-default" href="https://www.image-elf.com" />
     </head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DR8YQN5QE0"></script>
