--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </script>
     <script>
         window.l10n = {
-            intro1: 'Press thy enchanted mouse',
-            intro2: 'and glide to summon an image of any size, grand or wee!',
+            intro1: 'Press and start dragging',
+            intro2: 'to create an image of any size, big or small!',
             intro3: '- Image Elf',
             mobileSubtitle: 'Generate an image of any size',
             mobileDescription:
