--- a/index-ru.html
+++ b/index-ru.html
@@ -5,21 +5,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
         <meta name="theme-color" content="#2AE5BC" />
         <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-        <title>Image Elf - Генератор изображений-заглушек с помощью перетаскивания</title>
+        <title>Image Elf - Drag & drop генератор изображений-заглушек</title>
         <meta
-            content="Используйте перетаскивание для создания изображений-заглушек любого размера! Самый быстрый способ создать изображения-плейсхолдеры с указанными размерами."
+            content="Drag'n'drop генерация изображений-заглушек любого размера! Самый быстрый способ создать изображения-плейсхолдеры с помощью перетаскивания."
             name="description"
         />
         <meta content="Image Elf - Генератор изображений-заглушек" property="og:title" />
         <meta
-            content="Используйте перетаскивание для создания изображений-заглушек любого размера! Самый быстрый способ создать изображения-плейсхолдеры с указанными размерами."
+            content="Drag'n'drop генерация изображений-заглушек любого размера! Самый быстрый способ создать изображения-плейсхолдеры с помощью перетаскивания."
             property="og:description"
         />
         <meta content="https://www.image-elf.com/ru" property="og:url" />
         <meta content="https://www.image-elf.com/logo.svg" property="og:image" />
         <meta content="Image Elf - Генератор изображений-заглушек" name="twitter:title" />
         <meta
-            content="Используйте перетаскивание для создания изображений-заглушек любого размера! Самый быстрый способ создать изображения-плейсхолдеры с указанными размерами."
+            content="Drag'n'drop генерация изображений-заглушек любого размера! Самый быстрый способ создать изображения-плейсхолдеры с помощью перетаскивания."
             name="twitter:description"
         />
         <meta content="https://www.image-elf.com/logo.svg" name="twitter:image:src" />
@@ -42,12 +42,12 @@
     </script>
     <script>
         window.l10n = {
-            intro1: 'Нажмите на волшебную мышь',
-            intro2: 'и проведите, чтобы вызвать изображение любого размера, большое или маленькое!',
+            intro1: 'Нажмите и начните перетаскивать мышь,',
+            intro2: 'чтобы создать изображение любого размера!',
             intro3: '- Image Elf',
             mobileSubtitle: 'Создайте изображение любого размера',
             mobileDescription:
-                'Установите желаемые размеры, выберите формат изображения и мгновенно загрузите ваше творение!',
+                'Установите желаемый размер, выберите формат изображения и мгновенно загрузите ваше творение!',
             imageFormat: 'Формат изображения',
             widthPx: 'Ширина (px)',
             heightPx: 'Высота (px)',
