--- a/index-ru.html
+++ b/index-ru.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
         <meta name="theme-color" content="#2AE5BC" />
         <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-        <title>Image Elf - Drag & drop генератор изображений-заглушек</title>
+        <title>Image Elf - Drag & drop генератор картинок-заглушек</title>
         <meta
             content="Drag'n'drop генерация изображений-заглушек любого размера! Самый быстрый способ создать изображения-плейсхолдеры с помощью перетаскивания."
             name="description"
