--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
             name="twitter:description"
         />
         <meta content="https://www.image-elf.com/logo.svg" name="twitter:image:src" />
+
         <link href="https://www.image-elf.com" rel="canonical" />
+        <!-- Hreflang tags are IDENTICAL to other page's tags -->
+        <link rel="alternate" hreflang="en" href="https://www.image-elf.com" />
+        <link rel="alternate" hreflang="ru" href="https://www.image-elf.com/ru" />
+        <link rel="alternate" hreflang="x-default" href="https://www.image-elf.com" />
     </head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DR8YQN5QE0"></script>
@@ -34,6 +39,22 @@
         }
         gtag('js', new Date());
         gtag('config', 'G-DR8YQN5QE0');
+    </script>
+    <script>
+        window.l10n = {
+            intro1: 'Press and start dragging',
+            intro2: 'to create an image of any size, big or small!',
+            intro3: '- Image Elf',
+            mobileSubtitle: 'Generate an image of any size',
+            mobileDescription:
+                'Set your desired dimensions, select the image format, and download your creation instantly!',
+            imageFormat: 'Image Format',
+            widthPx: 'Width (px)',
+            heightPx: 'Height (px)',
+            tenXSize: '10x size',
+            generating: 'Generating...',
+            generateImage: 'Generate Image',
+        };
     </script>
     <body>
         <div id="root"></div>
